WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282225
Crash under Download::updateResumeDataWithPlaceholderURL
https://bugs.webkit.org/show_bug.cgi?id=282225
Summary
Crash under Download::updateResumeDataWithPlaceholderURL
Per Arne Vollan
Reported
2024-10-28 21:47:29 PDT
Crash under Download::updateResumeDataWithPlaceholderURL
Attachments
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2024-10-28 21:47:31 PDT
<
rdar://problem/138799971
>
Per Arne Vollan
Comment 2
2024-10-28 21:49:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35849
EWS
Comment 3
2024-10-29 07:35:48 PDT
Committed
285828@main
(a8dd13dd7342): <
https://commits.webkit.org/285828@main
> Reviewed commits have been landed. Closing PR #35849 and removing active labels.
EWS
Comment 4
2024-10-29 13:59:22 PDT
Committed
283286.382@safari-7620-branch
(e7bcf42b0d03): <
https://commits.webkit.org/283286.382@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2148 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug