Crash under Download::updateResumeDataWithPlaceholderURL https://bugs.webkit.org/show_bug.cgi?id=282225 rdar://138799971

Reviewed by Chris Dumez.

-[NSDictionary setObject: forKey:] will throw an exception if object is nil. Guard against this by
returning early without modifying the resume data.

* Source/WebKit/NetworkProcess/Downloads/cocoa/DownloadCocoa.mm:
(WebKit::Download::updateResumeDataWithPlaceholderURL):

Canonical link: https://commits.webkit.org/285828@main